[metadata]
name = substitution-cipher
version = 1.0
license = MIT
author = Sardor Hazratov
author_email = serdarjan1995@gmail.com
description = Substitution cipher with the simple letter frequency analyzer
long_description = file: README.rst, LICENSE
url = https://github.com/serdarjan1995/substitution-cipher
keywords = crypto, substitution cipher
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Cryptography
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
[options]
zip_safe = False
python_requires = >=3.9
install_requires =
    pyqt5
    matplotlib
[options.extras_require]
test =
    pytest
    coverage

[options.packages.find]
exclude =
    tests*
